# Finley-IBM

./: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.server.json  vite.config.ts
agent/: context.py  helper.py  main.py  nodes.py  pyproject.toml
server/: index.ts
server/routes/: finley.ts  token.ts
src/: App.css  App.tsx  index.css
src/components/: Navigation.tsx  SideBar.tsx
src/lib/: agentApi.ts  store.ts  supabase.ts
src/pages/: AccountPage.tsx  Achievements.tsx  BudgetTracker.tsx  Chat.tsx  DashboardPage.tsx  Expenses.tsx  HomePage.tsx  LoginPage.tsx  SignupPage.tsx
src/types/: chats.ts  moneys.ts
supabase/migrations/: 20251111164354_create_finley_schema.sql
