[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.2",
    "langchain>=1.0.5",
    "langchain-core>=1.0.4",
    "langchain-ibm>=1.0.1",
    "langgraph>=1.0.3",
    "logging>=0.4.9.6",
]
